DBZ-1402 Run in tests in forked JVM